# cce

./: README.md  setup.cfg
.github/workflows/: build.yml
cce/: main.py
cce.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: example.md
