[metadata]
name = cce
version = 0.1.0
author = Berend Weel
author_email = b.weel@esciencecenter.nl
description = Extract code blocks from carpentries templates
url =
project_urls =
    Code=
    Issues=
    Funding=
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
    dataclasses;python_version<"3.7"
    pytest >=6

[options.entry_points]
console_scripts =
    cce=cce.main:main
